gke-cluster/nginx-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: java-app
          image: harshshah2004/java-app:latest
          ports:
            - containerPort: 80
