gke-cluster/nginx-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
